// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-truncate #render should render component as expected (1) 1`] = `
<gux-truncate>
  <template shadowrootmode="open">
    <div>
      <span class="gux-truncate-slot-container">
        <slot></slot>
      </span>
    </div>
  </template>
  Some text to truncate
</gux-truncate>
`;

exports[`gux-truncate #render should render component as expected (2) 1`] = `
<gux-truncate>
  <template shadowrootmode="open">
    <div>
      <span class="gux-truncate-slot-container">
        <slot></slot>
      </span>
    </div>
  </template>
  <span>
    Some text to truncate in a span
  </span>
</gux-truncate>
`;

exports[`gux-truncate #render should render component as expected (3) 1`] = `
<gux-truncate>
  <template shadowrootmode="open">
    <div>
      <span class="gux-truncate-slot-container">
        <slot></slot>
      </span>
    </div>
  </template>
  <div>
    Div
    <span>
      with a span
    </span>
    inside
  </div>
</gux-truncate>
`;

exports[`gux-truncate #render should render component as expected (4) 1`] = `
<gux-truncate>
  <template shadowrootmode="open">
    <div>
      <span class="gux-truncate-slot-container">
        <slot></slot>
      </span>
    </div>
  </template>
  This is a long text that should be truncated after three lines of wrapped text
</gux-truncate>
`;
